# jinjac

./: .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  README.md  ast.c  ast.h  build_coverage.sh  build_debug.sh  build_release.sh  common.h  cppcheck_analysis.sh  jinja_expression.l  jinja_expression.y  launch_memcheck.sh  main.c  parameter.c  parameter.h  prepare_debug.sh
example/: CMakeLists.txt  example.c
include/: buildin.h  fatal.h  ops.h  trace.h  vm_opcode.h
jinja_expression/: CMakeLists.txt  jinja_expression.c
jinja_test_app/: CMakeLists.txt
jinjac_test_app/: CMakeLists.txt  jinjac_test_app.c
jinjac_vm/: CMakeLists.txt  buildin.c  buildin.h  common.h  convert.c  convert.h  j_array.c  j_array.h  j_object.c  j_object.h  j_value.c  j_value.h  jinjac_vm.c  loader.c  loader.h  param.c  param.h  stack.c  stack.h  str_obj.c  str_obj.h  trace.c  vm.c  vm.h
jinjacc/: CMakeLists.txt  buffer.cpp  buffer.h  code.cpp  code.h  common.h  flex_decl.h  jinja_expression.l  jinja_expression.y  jinjac_compiler.cpp  jinjac_compiler.h  jinjacc.cpp  staticdata.cpp  staticdata.h  string_ext.cpp  string_ext.h  trace.cpp  trace.h  verbose.cpp  verbose.h
jinjacc/ast/: ast.cpp  ast.h  astarray.cpp  astarray.h  astboolean.cpp  astboolean.h  astcompute.cpp  astcompute.h  astcondition.cpp  astcondition.h  astfunction.cpp  astfunction.h  astjinjaexpr.cpp  astjinjaexpr.h  astnode.cpp  astnode.h  astnumber.cpp  astnumber.h  aststatement.cpp  aststatement.h  aststringliteral.cpp  aststringliteral.h  asttext.cpp  asttext.h  astvariable.cpp  astvariable.h  astvariablearray.cpp  astvariablearray.h
libjinjac/: CMakeLists.txt
libjinjac/include/: jinjac.h
libjinjac/src/: CMakeLists.txt  ast.c  ast.h  block_statement.c  block_statement.h  buffer.c  buffer.h  buildin.c  buildin.h  common.h  convert.c  convert.h  flex_decl.h  jfunction.c  jfunction.h  jinja_expression.l  jinja_expression.y  jinjac.c  jinjac_parse.c  jinjac_parse.h  jinjac_stream.c  jinjac_stream.h  jlist.c  jlist.h  jobject.c  jobject.h  parameter.c  parameter.h  str_obj.c  str_obj.h  trace.c  trace.h
src/: CMakeLists.txt  ast.c  ast.h  buildin.c  buildin.h  common.h  convert.c  convert.h  jfunction.c  jfunction.h  jinja_expression.l  jinja_expression.y  jinjac.c  jinjac.h  jobject.c  jobject.h  main.c  parameter.c  parameter.h  str_obj.c  str_obj.h
test/: CMakeLists.txt  Makefile  autotest.rb  test_01b.expected  test_01b.jinja  test_01c.expected  test_02.expected  test_03.jinja  test_04.jinja  test_05.jinja  test_06.expected  test_07.jinja  test_08.expected  test_08.jinja  test_09.jinja  test_10.expected  test_10.jinja  test_11.expected  test_11.jinja  test_13.jinja  test_14.jinja  test_15.expected  test_16.expected  test_16.jinja  test_18.jinja  test_18c.expected  test_19.expected  test_19.jinja  test_19c.expected  test_19c.jinja  test_19d.jinja  test_19e.expected  test_19e.jinja  test_19f.expected  test_19f.jinja  test_20.jinja  test_22.jinja  test_22a.expected  test_22b.jinja  test_23.expected  (+2 more)
tests/: CMakeLists.txt  test_01.jinja  test_01b.expected  test_01c.jinja  test_01d.expected  test_01d.jinja  test_02.jinja  test_03.expected  test_04.expected  test_05.expected  test_06.jinja  test_07.expected  test_08b.expected  test_08b.jinja  test_09.expected  test_10.jinja  test_12.expected  test_12.jinja  test_13.expected  test_14.expected  test_15.jinja  test_17.expected  test_17.jinja  test_18.expected  test_18b.expected  test_18b.jinja  test_18c.jinja  test_19b.expected  test_19b.jinja  test_19c.expected  test_19d.expected  test_20.expected  test_20.jinja  test_21.expected  test_21.jinja  test_22.expected  test_22a.jinja  test_23.jinja
